--- a/style.css
+++ b/style.css
@@ -369,13 +369,187 @@ header button{
 }
 
 .testimonal-profession{
-    color: ;
     font-size: 0.875rem;
 }
 
 .testimonal-card:hover{
     transform: scale(1.05);
     border: 1px solid rgba(0, 0, 255, 0.659);
+}
+
+.section5{
+    display: flex;
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 2rem;
+    height: 39vh;
+    overflow: hidden;  
+}
+
+.section5 .left-container{
+    width: 50%;
+    overflow: hidden;
+    border-top-left-radius: 0.665rem;
+    border-bottom-left-radius: 0.665rem;
+}
+
+.section5 .left-container img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.section5 .right-container{
+    background-color: #f0f0f0;
+    width: 50%;
+    border-top-right-radius: 0.665rem;
+    border-bottom-right-radius: 0.665rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 0.7rem;
+    /* padding: 2rem; */
+}
+
+.section5 .right-container h2,.section5 .right-container p, .section5 .right-container .input{
+    padding:0 3rem;
+    align-self: flex-start;
+}
+
+.section5 .right-container h2{
+    font-size: 2.5rem;
+    font-weight: bold;
+    color: #6366f1;
+}
+
+.section5 .right-container p{
+    color: #333333;
+    font-weight: 500;
+    font-size: 0.9rem;
+}   
+
+.section5 .right-container .input{
+    display: flex;
+    gap: 1rem;
+}
+
+.section5 .right-container input{
+    display: flex;
+    padding: 0.6rem 0rem 0.6rem 0.75rem;
+    outline: none;
+    border-radius: 0.565rem;
+    border: 2px solid #aaa;
+}
+.section5 .right-container input:focus{
+    border-color: #2563eb;
+
+}
+
+.section5 .right-container button{
+    padding: 0.5rem 0.665rem;
+    border: none;
+    border-radius: 0.465rem;
+    background-color: #6366f1;
+    color: white;
+    font-weight: 580;
+}
+
+.section5 button:hover{
+    background-color: #2563eb;
+}
+
+.terms p{
+    margin-top: 0.75rem;
+    font-size: 0.76rem !important;
+}
+
+.terms a{
+    text-decoration: underline !important;
+    color: #2563eb;
+}
+
+footer{
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 3rem;
+    margin-bottom: 1rem;
+}
+
+.footer-main{
+    display: flex;
+    justify-content: space-between;
+    padding: 0 2rem;
+}
+
+.left-footer{
+    display: flex;
+    flex-direction: column;
+    gap: 0.8rem;
+    /* width: 34%; */
+}
+
+.footer-logo{
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    gap: 1rem;
+}
+
+.footer-logo span{
+    font-size: 2.2rem;
+    font-weight: bold;
+    color: black;
+}
+
+.footer-logo img{
+    height: 3.5rem;
+    width: 3.5rem;
+}
+
+.footer-desc p{
+    color: #555;
+    font-weight: 500;
+    text-align: start;
+}
+
+.footer-social{
+    display: flex;
+    gap: 1rem;
+}
+
+.right-footer{
+    display: grid;
+    gap: 5rem;
+    grid-template-columns: repeat(4,1fr);
+    justify-content: start;
+    text-align: start;
+}
+
+.list-footer{
+    display: flex;
+    flex-direction: column;
+    gap: 1.3rem;
+    
+}
+
+.list-footer h2{
+    font-size: 1.3rem;
+}
+
+.list-footer a{
+    color: #808080 ;
+    font-weight: 580;
+    font-size: 0.9rem;
+}
+
+.copyright{
+    color: #808080;
+    margin: 4rem auto -2rem;
+    padding-top: 2.5rem;
+    font-size: 0.78rem;
+    border-top:1px solid #e5e7eb;
 }
 
 @media screen and (max-width:768px) {
@@ -392,6 +566,45 @@ header button{
     .testimonal-card-container{
         
     grid-template-columns: repeat(1 ,1fr);
+    }
+
+    .section5 .left-container{
+        display: none;
+    
+    }
+    .section5{
+        width: 100%;
+        padding: 0;
+    }
+    
+    .section5 .right-container{
+        border-radius: 0.665rem;
+        padding: 0 ;
+        margin: 0 auto;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+    }
+
+    .section5 .right-container .input{
+        /* border: 2px solid; */
+        margin: 0 0;
+        display: flex;
+        flex-direction: row;
+        gap: 0.5rem;
+        padding: 0;
+        justify-content: left;
+        padding: 0 3rem;
+    }
+
+    .section5 .right-container button{
+        padding: 0.65rem;
+    }
+
+    .section5 .right-container h2{
+        text-align: start;
     }
 }
 
@@ -447,5 +660,36 @@ header button{
     .section2 h1{
         font-size: 2.3rem ;
         font-weight: 800;
+
+    }
+    
+    
+}
+
+@media screen and (max-width:1200px) {
+    .footer-main{
+        flex-direction: column;
+        gap: 2rem;
+    }
+    .left-footer{
+        margin: 0 auto;
+        justify-content: center;
+        align-items: center;
+    }
+    .footer-logo{
+        flex-wrap: wrap;
+    }
+    
+}
+
+@media screen and (max-width:800px) {
+    .right-footer{
+        grid-template-columns: repeat(2,1fr);
+        text-align: center;
+        gap: 1rem;
+    }
+    footer{
+        padding-left:0;
+        padding-right:0 ;
     }
 }
